--- a/src/Randevu.Mvc/Skins/Default/preview.htm
+++ b/src/Randevu.Mvc/Skins/Default/preview.htm
@@ -34,5 +34,12 @@
 				Save
         </button>
     </p>
-</body>
+    <br />
+    <br />
+    <br />
+    <br />
+    <p>Text box<br />
+        <input type="text" name="name" />
+    </p>
+    </body>
 </html>
